--- a/about.html
+++ b/about.html
@@ -16,13 +16,17 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>About Faridah Faizul</title>
+    <title>Faridah Faizul - Get to know me from my about page</title>
+    <meta
+      name="description"
+      content="Learn more about Faridah from this portfolio especially her background and contact information"
+    />
   </head>
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Faridah Faizul</a>
+        <a class="navbar-brand" href="index.html">Faridah Faizul</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html"
+              <a class="nav-link active" aria-current="page" href="about.html"
                 >About</a
               >
             </li>
@@ -52,46 +56,48 @@
       </div>
     </nav>
 
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from Perak, Malaysia</h3>
-    <div class="about-paragraphs">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images\yoga.png"
-            class="img-fluid rounded p-2 shadow"
-            alt=""
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images\weather.png"
-            class="img-fluid rounded p-2 shadow"
-            alt=""
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images\yogurt.png"
-            class="img-fluid rounded p-2 shadow"
-            alt=""
-          />
+    <div class="content-space">
+      <h1 class="text-center">About me</h1>
+      <h3 class="text-center">Front-end developer from Perak, Malaysia</h3>
+      <div class="about-paragraphs">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+          blanditiis harum.
+        </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="images\yoga.png"
+              class="img-fluid rounded p-2 shadow"
+              alt="Homepage image of the Yoga app"
+            />
+          </div>
+          <div class="col-sm-4">
+            <img
+              src="images\weather.png"
+              class="img-fluid rounded p-2 shadow"
+              alt="Homepage image of the Weather app"
+            />
+          </div>
+          <div class="col-sm-4">
+            <img
+              src="images\yogurt.png"
+              class="img-fluid rounded p-2 shadow"
+              alt="Homepage image of the Yogurt app"
+            />
+          </div>
         </div>
       </div>
-    </div>
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:fsyahirahfaizul@gmail.com" class="email-link">
-        fsyahirahfaizul@gmail.com
-      </a>
+      <div id="contact" class="mt-5">
+        <h2 class="text-center">📮 Contact me</h2>
+        <a href="mailto:fsyahirahfaizul@gmail.com" class="email-link">
+          fsyahirahfaizul@gmail.com
+        </a>
+      </div>
     </div>
   </body>
 </html>
