--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Faridah Faizul</title>
+    <title>Faridah Faizul - Front-end developer from Malaysia</title>
+    <meta
+      name="description"
+      content="Learn more about Faridah from this portfolio especially her past works and experiences"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +26,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Faridah Faizul</a>
+        <a class="navbar-brand" href="index.html">Faridah Faizul</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,34 +57,38 @@
     </nav>
 
     <!-- Content -->
-    <div class="text-center">
-      <h2>👋 Hi I am</h2>
-      <h1>Faridah Faizul</h1>
-      <h3>🇲🇾 Front-end developer, based in Malaysia</h3>
-      <div class="navigation-links mb-5">
-        <a href="about.html#contact" class="primary-link">Contact me</a>
-        <a href="about.html" class="secondary-link">About me</a>
+    <div class="content-space">
+      <div class="text-center">
+        <h2>👋 Hi I am</h2>
+        <h1>Faridah Faizul</h1>
+        <h3>🇲🇾 Front-end developer, based in Malaysia</h3>
+        <div class="navigation-links mb-5">
+          <a href="about.html#contact" class="primary-link">Contact me</a>
+          <a href="about.html" class="secondary-link">About me</a>
+        </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <img src="images\yoga.png" class="img-fluid rounded" alt="" />
-        </div>
-        <div class="col-sm-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga app</a>
-          </div>
-        </div>
-        <div class="row mt-5">
+      <div class="container">
+        <div class="row">
           <div class="col-sm-6">
+            <img
+              src="images\yoga.png"
+              class="img-fluid rounded"
+              alt="Homepage image of the Yoga app"
+            />
+          </div>
+          <div class="col-sm-6">
+            <h2 class="mb-3">Yoga app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="primary-link">Launch Yoga app</a>
+            </div>
+          </div>
+          <div class="col-sm-6 mt-5">
             <h2 class="mb-3">Weather app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -92,24 +100,30 @@
               <a href="#" class="primary-link">Launch Weather app</a>
             </div>
           </div>
-          <div class="col-sm-6">
-            <img src="images\weather.png" class="img-fluid rounded" alt="" />
+          <div class="col-sm-6 mt-5">
+            <img
+              src="images\weather.png"
+              class="img-fluid rounded"
+              alt="Homepage image of the Weather app"
+            />
           </div>
-          <div class="row mt-5">
-            <div class="col-sm-6">
-              <img src="images\yogurt.png" class="img-fluid rounded" alt="" />
-            </div>
-            <div class="col-sm-6">
-              <h2 class="mb-3">Yogurt app</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
-              <div class="mt-5">
-                <a href="#" class="primary-link">Launch Yogurt app</a>
-              </div>
+          <div class="col-sm-6 mt-5">
+            <img
+              src="images\yogurt.png"
+              class="img-fluid rounded"
+              alt="Homepage image of the Yogurt app"
+            />
+          </div>
+          <div class="col-sm-6 mt-5">
+            <h2 class="mb-3">Yogurt app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="primary-link">Launch Yogurt app</a>
             </div>
           </div>
         </div>
