Updated title and description of each pages

--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Faridah Faizul - Get to know me from my about page</title>
+    <title>Faridah Faizul - About me</title>
     <meta
       name="description"
-      content="Learn more about Faridah from this portfolio especially her background and contact information"
+      content="Get to know Faridah Faizul and her contact information"
     />
   </head>
   <body>
