--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Faridah Faizul - Front-end developer from Malaysia</title>
     <meta
       name="description"
-      content="Learn more about Faridah from this portfolio especially her past works and experiences"
+      content="Faridah Faizul is a Front-end developer from Malaysia, get to know more about what her experiences and she do for her past projects"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
